# ui-tests

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  meson.build
src/: budgie-enums.h.template  main.c  meson.build  popover-manager.c  popover-manager.h  popover.c  popover.h  styling.css
src/include/: util.h
src/popover/: main.c  popover-manager.c  popover-manager.h  popover.c  popover.h  styling.css
